--- a/myPortfolio.html
+++ b/myPortfolio.html
@@ -60,7 +60,6 @@
 
     <div class="container-fluid">
       <div class="row">
-        <!-- test khi click vào hiện modal -->
       <div class="col-sm-4 portfolio-item box filter graphic" data-toggle="modal" data-target="#exampleModal"> <a href="#" class="portfolio-link">
         <div class="caption">
           <div class="caption-content">
@@ -70,7 +69,7 @@
         </div>
         <img src="images/portfolio/work-1.jpg" class="img-responsive" alt=""> </a> 
         <!-- phần này hiển thị nội dung modal -->
-        <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true" data-backdrop="true">
+        <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true" data-backdrop="false">
             <div class="modal-dialog" role="document">
               <div class="modal-content">
                 <div class="modal-header">
